# TimePortal

./: .gitignore  Cargo.toml  README.md
Frontend/: .gitignore  package.json  tsconfig.json
Frontend/src/lib/: global.ts
Frontend/src/routes/: +layout.svelte  +page.svelte  Card.svelte  Header.svelte  styles.scss
config/: mystudio.ini
src/: api.rs  frontend.rs  main.rs  students.rs
