[package]
name = "time_portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
hyper = "0.14.27"
mime_guess = "2.0.4"
reqwest = { version = "0.11.20", features = ["serde_json", "json", "blocking"] }
rust-embed = "8.0.0"
serde = { version = "1.0.185", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["macros", "signal", "tracing", "rt-multi-thread"] }
thiserror = "1.0.47"
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
serde_ini = "0.2.0"
chrono-tz = "0.8.3"
local-ip-address = "0.5.4"
